Add Maven configuration and update Copilot instructions for Java 22+ compatibility